# clinical-trials-data

./: .gitignore  .pre-commit-config.yml  CHANGELOG.md  LICENSE  README.md  conda-lock.sh  conda-lock.yml  conda-sync.sh  dev-environment.yml  environment.yml  pyproject.toml
analysis/: explore_data.ipynb
data/: .gitignore  README.md
decisions/: 0001-record-decisions.md
docs/: devguide.md
docs/source/: clinical_trials_gov_data.rst  conf.py  index.rst  modules.rst
src/clinical_trials_data/data_extraction/: build_data_sources.py  create_sqlite.py  data_api.py  extract_protocol_text.py  protcol_extractor.py
tests/: test_about.py
